<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:autofillHints=""
        android:id="@+id/firstnameInput"
        android:inputType="text" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:id="@+id/lastnameInput"
        android:inputType="text"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints=""
        android:id="@+id/emailInput"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:id="@+id/passwordInput"
        android:autofillHints="Enter a Password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass"
        android:layout_marginTop="30dp"
        android:autofillHints="Enter a Password"
        android:id="@+id/passConfirmInput"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:id="@+id/registerUser"
            android:text="@string/register"
            android:textAllCaps="false"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already a User?"
            android:onClick="moveToLogin"
            android:id="@+id/loginUser"
            android:textColor="@color/light_blue"
            />

    </LinearLayout>

</LinearLayout>