<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddHostActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/automateAddress"
        android:hint="@string/automate"
        android:inputType="textPostalAddress"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Name"
                />
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/hostName"
                android:autofillHints=""
                android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostType"
            />



        <Spinner
            android:id="@+id/hostTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/inputAddress"
                android:inputType="textPostalAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone #:"
                />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/hostPhone"
                android:inputType="phone"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lat"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longit"
        />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addHost"
        android:text="@string/addHost"/>







</LinearLayout>